chore: fix bomba